--- a/style.css
+++ b/style.css
@@ -78,11 +78,10 @@ main{
 .respuesta{
     vertical-align: top;
     width: 30%;
-    height: auto;
+    height: 90%;
     display: inline-block;
     text-align: center;
     padding: 16% 1.2% 30% 1.2%;
-    box-sizing: border-box;
     background-color: white;
     border-radius: 32px;
 }
@@ -96,9 +95,9 @@ main{
     color: #495057;
 }
 .copiar{
-    float: right;
-    width: 30%;
-    padding: 2% 0;
+    width: 90%;
+    padding: 6.5% 0;
+    margin-top: 3em;
     font-size: 100%;
     color: #0a3871;
     background: #D8DFE8;
@@ -133,7 +132,7 @@ main{
         display: inline;
     }
     .muñeco{
-        width: 0%;
+        display: none;
     }
     .ingresotexto p{
         margin: 3%;
@@ -164,7 +163,7 @@ main{
         display: inline;
     }
     .muñeco{
-        width: 0%;
+        display: none;
     }
     .ingresotexto p{
         margin: 50px 0 0 0;
