--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ main{
     .input{
         display: inline;
     }
-    .muñeco{
+    .muneco{
         display: none;
     }
     .ingresotexto p{
@@ -162,7 +162,7 @@ main{
     .input{
         display: inline;
     }
-    .muñeco{
+    .muneco{
         display: none;
     }
     .ingresotexto p{
